target/generated-sources/antlr4/com/equipoc/cososcript/interprete/CosoScriptParser.java
// Generated from com\equipoc\cososcript\interprete\CosoScript.g4 by ANTLR 4.5.1
package com.equipoc.cososcript.interprete;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CosoScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COSO=1, MOSTRAR=2, SI=3, SINO=4, REPETIR=5, HASTA=6, ENTERO=7, REAL=8, 
		CADENA_TIPO=9, LOGICO_TIPO=10, VERDADERO=11, FALSO=12, MAS=13, MENOS=14, 
		MULT=15, DIV=16, IGUAL=17, NO_IGUAL=18, MENOR=19, MENOR_IGUAL=20, MAYOR=21, 
		MAYOR_IGUAL=22, Y=23, O=24, NO=25, ASIGN=26, PUNTO_COMA=27, COLON=28, 
		PAREN_IZQD=29, PAREN_DER=30, LLAVE_IZQD=31, LLAVE_DER=32, NUMERO=33, CADENA=34, 
		ID=35, WS=36, COMENTARIO=37;
	public static final int
		RULE_programa = 0, RULE_sentencia = 1, RULE_declaracion = 2, RULE_asignacion = 3, 
		RULE_mostrar = 4, RULE_condicional = 5, RULE_repetir = 6, RULE_expresion = 7, 
		RULE_logica_o = 8, RULE_logica_y = 9, RULE_igualdad = 10, RULE_comparacion = 11, 
		RULE_aditiva = 12, RULE_multiplicativa = 13, RULE_unaria = 14, RULE_postfija = 15, 
		RULE_primaria = 16, RULE_numero = 17, RULE_cadena = 18, RULE_booleano = 19, 
		RULE_tipo = 20;
	public static final String[] ruleNames = {
		"programa", "sentencia", "declaracion", "asignacion", "mostrar", "condicional", 
		"repetir", "expresion", "logica_o", "logica_y", "igualdad", "comparacion", 
		"aditiva", "multiplicativa", "unaria", "postfija", "primaria", "numero", 
		"cadena", "booleano", "tipo"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'coso'", "'mostrar'", "'si'", "'sino'", "'repetir'", "'hasta'", 
		"'entero'", "'real'", "'cadena'", "'logico'", "'verdadero'", "'falso'", 
		"'+'", "'-'", "'*'", "'/'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", 
		"'&&'", "'||'", "'!'", "'='", "';'", "':'", "'('", "')'", "'{'", "'}'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COSO", "MOSTRAR", "SI", "SINO", "REPETIR", "HASTA", "ENTERO", "REAL", 
		"CADENA_TIPO", "LOGICO_TIPO", "VERDADERO", "FALSO", "MAS", "MENOS", "MULT", 
		"DIV", "IGUAL", "NO_IGUAL", "MENOR", "MENOR_IGUAL", "MAYOR", "MAYOR_IGUAL", 
		"Y", "O", "NO", "ASIGN", "PUNTO_COMA", "COLON", "PAREN_IZQD", "PAREN_DER", 
		"LLAVE_IZQD", "LLAVE_DER", "NUMERO", "CADENA", "ID", "WS", "COMENTARIO"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CosoScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CosoScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CosoScriptParser.EOF, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CosoScriptVisitor ) return ((CosoScriptVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COSO) | (1L << MOSTRAR) | (1L << SI) | (1L << REPETIR) | (1L << ID))) != 0)) {
				{
				{
				setState(42);
				sentencia();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(48);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public MostrarContext mostrar() {
			return getRuleContext(MostrarContext.class,0);
		}
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public RepetirContext repetir() {
			return getRuleContext(RepetirContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).enterSentencia(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).exitSentencia(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CosoScriptVisitor ) return ((CosoScriptVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentencia);
		try {
			setState(55);
			switch (_input.LA(1)) {
			case COSO:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				declaracion();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				asignacion();
				}
				break;
			case MOSTRAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(52);
				mostrar();
				}
				break;
			case SI:
				enterOuterAlt(_localctx, 4);
				{
				setState(53);
				condicional();
				}
				break;
			case REPETIR:
				enterOuterAlt(_localctx, 5);
				{
				setState(54);
				repetir();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public TerminalNode COSO() { return getToken(CosoScriptParser.COSO, 0); }
		public TerminalNode ID() { return getToken(CosoScriptParser.ID, 0); }
		public TerminalNode COLON() { return getToken(CosoScriptParser.COLON, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(CosoScriptParser.PUNTO_COMA, 0); }
		public TerminalNode ASIGN() { return getToken(CosoScriptParser.ASIGN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CosoScriptVisitor ) return ((CosoScriptVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(COSO);
			setState(58);
			match(ID);
			setState(59);
			match(COLON);
			setState(60);
			tipo();
			setState(63);
			_la = _input.LA(1);
			if (_la==ASIGN) {
				{
				setState(61);
				match(ASIGN);
				setState(62);
				expresion();
				}
			}

			setState(65);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CosoScriptParser.ID, 0); }
		public TerminalNode ASIGN() { return getToken(CosoScriptParser.ASIGN, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(CosoScriptParser.PUNTO_COMA, 0); }
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CosoScriptVisitor ) return ((CosoScriptVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(ID);
			setState(68);
			match(ASIGN);
			setState(69);
			expresion();
			setState(70);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MostrarContext extends ParserRuleContext {
		public TerminalNode MOSTRAR() { return getToken(CosoScriptParser.MOSTRAR, 0); }
		public TerminalNode PAREN_IZQD() { return getToken(CosoScriptParser.PAREN_IZQD, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PAREN_DER() { return getToken(CosoScriptParser.PAREN_DER, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(CosoScriptParser.PUNTO_COMA, 0); }
		public MostrarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mostrar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).enterMostrar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).exitMostrar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CosoScriptVisitor ) return ((CosoScriptVisitor<? extends T>)visitor).visitMostrar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MostrarContext mostrar() throws RecognitionException {
		MostrarContext _localctx = new MostrarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_mostrar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(MOSTRAR);
			setState(73);
			match(PAREN_IZQD);
			setState(74);
			expresion();
			setState(75);
			match(PAREN_DER);
			setState(76);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalContext extends ParserRuleContext {
		public SentenciaContext sentencia;
		public List<SentenciaContext> entonces = new ArrayList<SentenciaContext>();
		public List<SentenciaContext> sino = new ArrayList<SentenciaContext>();
		public TerminalNode SI() { return getToken(CosoScriptParser.SI, 0); }
		public TerminalNode PAREN_IZQD() { return getToken(CosoScriptParser.PAREN_IZQD, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PAREN_DER() { return getToken(CosoScriptParser.PAREN_DER, 0); }
		public List<TerminalNode> LLAVE_IZQD() { return getTokens(CosoScriptParser.LLAVE_IZQD); }
		public TerminalNode LLAVE_IZQD(int i) {
			return getToken(CosoScriptParser.LLAVE_IZQD, i);
		}
		public List<TerminalNode> LLAVE_DER() { return getTokens(CosoScriptParser.LLAVE_DER); }
		public TerminalNode LLAVE_DER(int i) {
			return getToken(CosoScriptParser.LLAVE_DER, i);
		}
		public TerminalNode SINO() { return getToken(CosoScriptParser.SINO, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).enterCondicional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).exitCondicional(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CosoScriptVisitor ) return ((CosoScriptVisitor<? extends T>)visitor).visitCondicional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(SI);
			setState(79);
			match(PAREN_IZQD);
			setState(80);
			expresion();
			setState(81);
			match(PAREN_DER);
			setState(82);
			match(LLAVE_IZQD);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COSO) | (1L << MOSTRAR) | (1L << SI) | (1L << REPETIR) | (1L << ID))) != 0)) {
				{
				{
				setState(83);
				((CondicionalContext)_localctx).sentencia = sentencia();
				((CondicionalContext)_localctx).entonces.add(((CondicionalContext)_localctx).sentencia);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(LLAVE_DER);
			setState(99);
			_la = _input.LA(1);
			if (_la==SINO) {
				{
				setState(90);
				match(SINO);
				setState(91);
				match(LLAVE_IZQD);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COSO) | (1L << MOSTRAR) | (1L << SI) | (1L << REPETIR) | (1L << ID))) != 0)) {
					{
					{
					setState(92);
					((CondicionalContext)_localctx).sentencia = sentencia();
					((CondicionalContext)_localctx).sino.add(((CondicionalContext)_localctx).sentencia);
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(98);
				match(LLAVE_DER);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RepetirContext extends ParserRuleContext {
		public TerminalNode REPETIR() { return getToken(CosoScriptParser.REPETIR, 0); }
		public TerminalNode LLAVE_IZQD() { return getToken(CosoScriptParser.LLAVE_IZQD, 0); }
		public TerminalNode LLAVE_DER() { return getToken(CosoScriptParser.LLAVE_DER, 0); }
		public TerminalNode HASTA() { return getToken(CosoScriptParser.HASTA, 0); }
		public TerminalNode PAREN_IZQD() { return getToken(CosoScriptParser.PAREN_IZQD, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode PAREN_DER() { return getToken(CosoScriptParser.PAREN_DER, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(CosoScriptParser.PUNTO_COMA, 0); }
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public RepetirContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repetir; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).enterRepetir(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).exitRepetir(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CosoScriptVisitor ) return ((CosoScriptVisitor<? extends T>)visitor).visitRepetir(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RepetirContext repetir() throws RecognitionException {
		RepetirContext _localctx = new RepetirContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_repetir);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(REPETIR);
			setState(102);
			match(LLAVE_IZQD);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COSO) | (1L << MOSTRAR) | (1L << SI) | (1L << REPETIR) | (1L << ID))) != 0)) {
				{
				{
				setState(103);
				sentencia();
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(109);
			match(LLAVE_DER);
			setState(110);
			match(HASTA);
			setState(111);
			match(PAREN_IZQD);
			setState(112);
			expresion();
			setState(113);
			match(PAREN_DER);
			setState(114);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpresionContext extends ParserRuleContext {
		public Logica_oContext logica_o() {
			return getRuleContext(Logica_oContext.class,0);
		}
		public ExpresionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expresion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).enterExpresion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).exitExpresion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CosoScriptVisitor ) return ((CosoScriptVisitor<? extends T>)visitor).visitExpresion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpresionContext expresion() throws RecognitionException {
		ExpresionContext _localctx = new ExpresionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expresion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			logica_o();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logica_oContext extends ParserRuleContext {
		public List<Logica_yContext> logica_y() {
			return getRuleContexts(Logica_yContext.class);
		}
		public Logica_yContext logica_y(int i) {
			return getRuleContext(Logica_yContext.class,i);
		}
		public List<TerminalNode> O() { return getTokens(CosoScriptParser.O); }
		public TerminalNode O(int i) {
			return getToken(CosoScriptParser.O, i);
		}
		public Logica_oContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logica_o; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).enterLogica_o(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).exitLogica_o(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CosoScriptVisitor ) return ((CosoScriptVisitor<? extends T>)visitor).visitLogica_o(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Logica_oContext logica_o() throws RecognitionException {
		Logica_oContext _localctx = new Logica_oContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_logica_o);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			logica_y();
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==O) {
				{
				{
				setState(119);
				match(O);
				setState(120);
				logica_y();
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Logica_yContext extends ParserRuleContext {
		public List<IgualdadContext> igualdad() {
			return getRuleContexts(IgualdadContext.class);
		}
		public IgualdadContext igualdad(int i) {
			return getRuleContext(IgualdadContext.class,i);
		}
		public List<TerminalNode> Y() { return getTokens(CosoScriptParser.Y); }
		public TerminalNode Y(int i) {
			return getToken(CosoScriptParser.Y, i);
		}
		public Logica_yContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logica_y; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).enterLogica_y(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CosoScriptListener ) ((CosoScriptListener)listener).exitLogica_y(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CosoScriptVisitor ) return ((CosoScriptVisitor<? extends T>)visitor).visitLogica_y(this);
			else return visitor.visitChildren(this);
		}
	}
